--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos grátis</h1>
+            <img src="Imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="Imagens/curso-html-css.png" alt="Curso HTML 5">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis maxime iusto sed nobis officiis ab? Cumque sunt consequatur voluptatibus libero adipisci exercitationem inventore voluptatem dicta? Voluptas corporis non dolor?</p>
+            <p><a href="">Acesse o curso de HTML 5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="Imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ducimus soluta nemo culpa, voluptas architecto ex similique sit incidunt accusamus molestiae vitae harum inventore libero omnis pariatur minus ut neque!</p>
+            <p><a href="">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
